# easysh

./: README.md  executor.py  main.py  pyproject.toml  utils.py
easysh/: commands.py  completion.py  config.py  executor.py  explain.py  help.py  main.py  suggest.py  utils.py
easysh/commands/: __init__.py  filesystem.py  git.py  npm.py  router.py  system.py
tests/: test_explain.py  test_suggest.py  test_translate.py
